I added the ability to search for a exact phrase. For most of the searching that I'm doing this returns better results then relying on the frequency of the keywords.

--- a/searchInvertedIsam.1
+++ b/searchInvertedIsam.1
@@ -2,7 +2,7 @@
 .SH NAME
 searchInvertedIsam - Search a set of inverted isam files for a set of given keywords.
 .SH SYNOPSIS
-.B searchInvertedIsam \fIfilename\fP \fIkeywords\fP
+.B searchInvertedIsam \fIfilename\fP \fI[-e]\fP \fIkeywords\fP
 
 .SH DESCRIPTION
 
@@ -20,6 +20,11 @@ accepts the following options:
 .B \fIfilename\fP
 This is the base filename of the index files. If you have the index
 files foo.if, foo.pf and foo.df you would pass foo as the filename.
+.TP 8
+.B \fI-e\fP
+If the -e parameter is passed the following keywords will be taken as
+an exact phrase. Only document that have the exact phrase will be
+returned.
 .TP 8
 .B \fIkeywords\fP
 One or more keywords that you want to search for in the index
